Removed whitespace, organised divs and fixed comment syntax

--- a/style.css
+++ b/style.css
@@ -1,131 +1,93 @@
-
 body{
-	background-color:#9FA8DA;
-	font-family:sans-serif;
+    background-color:#9FA8DA;
+    font-family:sans-serif;
 }
-
 h1{
-	color: white;
-	text-align: center;
+    color: white;
+    text-align: center;
 }
-
 #logo:hover{
-	filter: brightness(80%);
+    filter: brightness(80%);
 }
-
 .title{
-	margin-top:2.4vw;
+    margin-top:2.4vw;
 }
 .mainbox{
-	border-color:#5C6BC0;
+    border-color:#5C6BC0;
 }
-
 .queryBox{
-	text-align:center;
+    text-align:center;
 }
-
 .topBar{
-	height: 50px;
-	background-color:#5C6BC0;
+    height: 50px;
+    background-color:#5C6BC0;
 }
-
 .panel{
-	border-color:#5C6BC0;
+    border-color:#5C6BC0;
+    background-color:#E8EAF6;
 }
-
-.panel{
-	background-color:#E8EAF6;
-
-}
-
 .panel > .panel-heading{
-	background-color:#5C6BC0;
-	border-color:#5C6BC0;
+    background-color:#5C6BC0;
 }
 
 @media screen and (max-width: 800px){
-	.title{
-	     margin-top:5vw;
+    .title{
+        margin-top:5vw;
     }
-	
-	
-	.container{
-		padding-top: 10vw;
-	}
-	
-	
+    .container{
+        padding-top: 10vw;
+    }
 }
-
 .panel-title{
-	color:white;
-	font-size:150%;
+    color:white;
+    font-size:150%;
 }
-
-
 #logo{
-	height: 50px;
-	width: 55px;
+    height: 50px;
+    width: 55px;
     padding-left:5px;
-
-
 }
-
 .input-group{
-	text-align: center;
-	margin:auto;
+    text-align: center;
+    margin:auto;
 }
-
-
 #settings {
     font-size: 40px;
-	float:right;
-	padding-left:10px;
-	padding-top:5px;
-	padding-bottom:5px;
-	color: white;
-	
+    float:right;
+    padding-left:10px;
+    padding-top:5px;
+    padding-bottom:5px;
+    color: white;
 }
-
 .panel-title{
-	text-align:center;
+    text-align:center;
 }
-
 .form-group{
-	text-align:center;
-
+    text-align:center;
 }
-
-
 .form-control{
-	height: 50px;
+    height: 50px;
 }
-
 .useButton{
-	padding-left:50px;
-	padding-right:50px;
-	padding-top: 10px;
-	padding-bottom:10px;
+    padding-left:50px;
+    padding-right:50px;
+    padding-top: 10px;
+    padding-bottom:10px;
 }
-
 .container{
-	margin-top:5vw;
+    margin-top:5vw;
 }
-
-
 .btn-success{
-	font-size:130%;
-	
+    font-size:130%;
 }
-
 .roomDetails{
-	font-size:180%;
-	text-align:center;
+    font-size:180%;
+    text-align:center;
 }
-
 #RDTitle{
-	font-size:100%;
+    font-size:100%;
 }
 #RDTime{
-	font-size: 140%;
-	padding-top: 40px;
+    font-size: 140%;
+    padding-top: 40px;
 }
